v 0.0.2 - fix wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -239,12 +239,17 @@ html, body {
               justify-content: flex-start;
               align-items: baseline;
               gap: 8px;
+
+              .offrande-count {
+                text-wrap: nowrap;
+              }
       
               .offrande {
                 padding: 8px;
                 background-color: white;
                 border: 1px solid #c9c6bb;
                 color: #362712;
+                width: fit-content;
               }
             }
     
